tests/bad/syntax/027-single-component.clap
val x : { U int } = at { U int } { U <- }

